<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/location_button"
            android:layout_width="211dp"
            android:layout_height="70dp"
            android:drawableEnd="@drawable/icon"
            android:text="@string/button_text"
            android:textSize="25sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingVertical="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView

            android:paddingVertical="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/cityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/city_name"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/view_weather"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/black"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:id="@+id/dateTime"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/date_and_time"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        />

    <LinearLayout

        android:layout_width="379dp"
        android:layout_height="91dp">

        <TextView
            android:id="@+id/temperature_celsius"
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/centigrade"
            android:layout_marginRight="75dp"
            />

        <TextView
            android:id="@+id/temperature_farenheit"
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/farenheit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atmospheric_pressure"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/atom_pressure"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visibility"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/visibility"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"

            />

    </LinearLayout>

    <TextView
        android:id="@+id/weatherDescription"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="117dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:text="@string/sunrise"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            />

        <TextView

            android:layout_width="117dp"
            android:layout_height="match_parent"
            android:layout_marginStart="90dp"
            android:text="@string/sunset"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sunrise"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="170dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sunset"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="117dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp" />

        <TextView
            android:id="@+id/sunset"
            android:layout_width="117dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp" />

    </LinearLayout>

</LinearLayout>